--- a/style.css
+++ b/style.css
@@ -296,9 +296,20 @@ q {
     color: rgba(0, 0, 0, 1)!important;
 }
 
+.col-sm-4 ul{
+    list-style:none!important;
+    padding-inline-start:0;  
+}
+
+.col-sm-4 a {
+    font-weight:600!important;
+    font-size:18px!important;
+}
+
 .col-sm-4 h2 {
     color: rgba(0, 0, 0, 1)!important;
-    
+    font-weight:bold;
+    font-size:32px!important;
 }
 
 .row.row-no-gutters > [class^="col-"],
