--- a/style.css
+++ b/style.css
@@ -295,6 +295,10 @@ q {
     margin-left: 0;
 }
 
+#logo {
+    height:100px;
+    width:100px;
+}
 
 .col-sm-3 social{
     color: rgba(0, 0, 0, 1)!important;
