--- a/style.css
+++ b/style.css
@@ -225,6 +225,7 @@ a:hover {
 
 q {
     font-size: 18px;
+    color:rgba(0, 0, 0, 1);
     font-weight: 500;
     font-style: italic;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
